--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 body {
   font-family: sans-serif; 
+  background-color: grey;
 }
 
 .app {
   width: 500px;
   margin: 0 auto;
   padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 5px solid #000000;
+  border-radius: 10px;
+  margin-top: 30px;
 }
 
 h1 {
@@ -24,17 +26,18 @@ textarea {
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 10px;
   resize: vertical; 
 }
 
 button {
   padding: 10px;
-  background-color: #1da1f2; /* Twitter blue */
+  background-color: black; 
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  border-radius: 50px;
 }
 
 ul {
