--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,47 @@
 body {
-  font-family: sans-serif; 
-  background-color: grey;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
-.app {
-  width: 500px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 5px solid #000000;
-  border-radius: 10px;
-  margin-top: 30px;
-}
-
-h1 {
+div {
   text-align: center;
-  margin-bottom: 20px;
 }
 
 form {
-  display: flex;
-  flex-direction: column; 
+  margin-bottom: 20px;
 }
 
-textarea {
+input {
   padding: 10px;
-  margin-bottom: 10px;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  resize: vertical; 
+  margin-right: 10px;
+  width: 300px;
 }
 
 button {
   padding: 10px;
-  background-color: black; 
+  background-color: #1da1f2;
   color: white;
   border: none;
-  border-radius: 5px;
   cursor: pointer;
-  border-radius: 50px;
+}
+
+button:hover {
+  background-color: #0d8bf2;
 }
 
 ul {
-  list-style: none;
+  list-style-type: none;
   padding: 0;
 }
 
 li {
-  padding: 15px;
-  border-bottom: 1px solid #eee;
+  background-color: #f5f8fa;
+  border: 1px solid #e1e8ed;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
 }
