--- a/src/index.css
+++ b/src/index.css
@@ -61,8 +61,8 @@ li {
   background-color: #ffffff;
   border: 1px solid #e1e8ed;
   margin-bottom: 10px;
-  padding: 0;
-  border-radius: 15;
+  padding: 15px;
+  border-radius: 15px;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
@@ -77,4 +77,19 @@ li:hover {
 
 li:last-child {
   margin-bottom: 0;
+}
+
+img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+}
+
+form p {
+  font-size: 14px;
+  color: #888;
+}
+
+button {
+  margin-top: 10px;
 }
